--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,8 @@
 name: Publish to GitHub Packages
 
 on:
-  push:
-    branches:
-      - main
-      - master
+  release:
+    types: [created]
 
 jobs:
   publish:
@@ -29,3 +27,11 @@ jobs:
 
     - name: Publish to GitHub Packages
       run: npm publish --access public
+
+    - name: Authenticate with npm
+      run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
+      env:
+        NPM_TOKEN: ${{secrets.NPM_TOKEN}}
+
+    - name: Publish to npm
+      run: npm publish
